fixed card meta margin on small screen

--- a/style.scss
+++ b/style.scss
@@ -394,6 +394,10 @@ html{
         font-weight: 400;
         margin: -1.5rem 0 1rem .5rem;
 
+        @media only screen and (max-width: 850px){
+            margin-left: 2rem;
+        }
+
         &--blogpost{
             margin: 0;
             padding: 1rem;
